--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint . --ext .ts,.tsx,.js,.jsx --fix"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.0",
+    "bootstrap": "^5.2.2",
     "formik": "^2.2.9",
     "prettier": "^2.7.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.36.1"
   },
